<resources>
    <string name="app_name">WellMet</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>

    <string name="notification_title">WellMet</string>
    <string name="notification_message">Working in background…</string>
    <string name="notification_warning_title">Someone is getting too close!</string>
    <string name="notification_warning_description">Keeping your distance to stay safe.</string>
    <string name="notification_channel_name">Status</string>
    <string name="notification_channel_description">Status of background work.</string>
    <string name="notification_alert_channel_name">Proximity Alert</string>
    <string name="notification_alert_channel_description">Alert when someone getting too close</string>
    <string name="level1">Good</string>
    <string name="level2">Moderate</string>
    <string name="level3">Unhealthy</string>
    <string name="level4">Very Unhealthy</string>
    <string name="alert_enabled">PROXIMITY ALERT ENABLED</string>
    <string name="alert_disabled">PROXIMITY ALERT DISABLED</string>
    <string name="phone_use_description">For uniqueness only, it\'s OK to lie</string>
    <string name="ok">OK</string>
    <string name="sign_up_title">Your Phone Number</string>

    <string name="bluetooth_not_enable_title">Bluetooth not enabled</string>
    <string name="bluetooth_not_enable_msg">Please enable bluetooth in settings and restart this application.</string>
    <string name="bluetooth_le_not_available_title">Bluetooth LE not available</string>
    <string name="bluetooth_le_not_available_msg">Sorry, this device does not support Bluetooth LE.</string>
    <string name="invalid_phone_number">Your phone number is too short</string>

    <string name="guide_title">Social Distance Guide</string>
    <string name="guide_description">WellMet close contact number is the person-day per week. It means the same person can be count twice if you get close in 2 days in a week to provide data anonymity and still provide a meaningful number. This guide does not conform to any standard.</string>
    <string name="title_level1">0 – 50 Good</string>
    <string name="description_level1">Little or no risk, stay at home is still recommended.</string>
    <string name="title_level2">51 – 100 Moderate</string>
    <string name="description_level2">Medium contact, should avoid close contact and wear a mask in work or public place.</string>
    <string name="title_level3">101 – 300 Unhealthy</string>
    <string name="description_level3">Increased likelihood of exposure, should wear a mask all the time. Seek a doctor when found yourself any symptom.</string>
    <string name="title_level4">> 300 Very Unhealthy</string>
    <string name="description_level4">The highest chance of exposure should wear a respirator mask when close contact with others. An examination is highly recommended.</string>

    <string name="user_code_title">Your Tracing Key:</string>
    <string name="backup_warning">Tab to copy the key above then you can backup it. Don\'t let anyone else know the key. It can use for your anonymous close contact search.</string>
    <string name="how_it_work">How it work?</string>
    <string name="notification_settings">Alert notification settings</string>
    <string name="tell_your_friends">Tell your friends</string>
    <string name="made_in">Made with ❤️ in Thailand</string>
    <string name="copied">Copied Tracing Key!</string>
    <string name="export_your_data">Export your data (without location)</string>
    <string name="how_it_work_link">https://medium.com/wellmet/how-wellmet-work-f5e1239b3fce</string>
    <string name="share">Share WellMet with your friends</string>
    <string name="share_title">WellMet - Social Distance Tracker</string>
    <string name="share_text">WellMet - Social Distance Tracker. Help track the spread of #COVID19 and other close contact infections. Download now at https://github.com/artiya4u/wellmet/releases</string>
    <string name="rate">Feedback</string>
</resources>
